# flask_microblog_tutorial

./: microblog.code-workspace  pyproject.toml
microblog/: app.db  config.py
microblog/app/: __init__.py  forms.py  models.py  routes.py
microblog/app/templates/: 404.html  500.html  edit_profile.html  index.html  register.html  user.html
microblog/migrations/versions/: 5ce982b7b9b5_new_fields_in_user_model.py  7875f1e3e7c6_posts_table.py  adef3920b014_users_table.py  ec593e530390_followers.py
tests/: test_microblog.py
