[tool.poetry]
name = "microblog"
version = "0.1.0"
description = ""
authors = ["Matthew Pugh <matthew.o.pugh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
python-dotenv = "^0.15.0"
black = "^20.8b1"
Flask-WTF = "^0.14.3"
Flask-SQLAlchemy = "^2.4.4"
Flask-Migrate = "^2.5.3"
Flask-Login = "^0.5.0"
email-validator = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
